--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -1,4 +1,7 @@
-<mvc:View controllerName="produto2.controller.App" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
+<mvc:View controllerName="produto2.controller.App" 
+	  xmlns:html="http://www.w3.org/1999/xhtml" 
+	  xmlns:mvc="sap.ui.core.mvc" 
+	  displayBlock="true"
 	xmlns="sap.m">
 	<App>
 		
