--- a/view/Main.view.xml
+++ b/view/Main.view.xml
@@ -1,18 +1,14 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" controllerName="produto2.controller.ListProdutos">
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" controllerName="produto2.controller.Main">
 	<App>
-		<pages>
-			<Page title="Title" showNavButton="true" navButtonPress="onNavBack">
+		<pages><Page title="{i18n>mainTitle}">
 				<content>
-					<!--<List>
-						<items>
-							<StandardListItem >
-								
-							</StandardListItem>
-						</items>
-					</List>-->
-					<SelectList items="{path: '/Produtos'}">
-						<core:Item key="{Nome}" text="{Descricao}"/>
-					</SelectList>
+				    <Panel id="__panel0" class="sapUiResponsiveMargin">
+				        <content>
+				            <Button text="{i18n>btnCadastrar}" class="sapUiTinyMargin" width="30%" id="btnRegister" type="Emphasized"/>
+				            <Button text="{i18n>btnListar}" class="sapUiTinyMargin" width="30%" id="btnList" type="Emphasized" press="listProducts"/>
+				            <Button text="{i18n>btnOrderBy}" class="sapUiTinyMargin" width="30%" id="btnOrderBy" type="Emphasized"/>
+				        </content>
+				    </Panel>
 				</content>
 			</Page>
 		</pages>
